// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generates js 1`] = `
"const { jsrx, $, shell } = require(\\"jsrx\\")

jsrx({
    dev: {
        sayHello: $(\`echo hello\`),
        sayGoodBye: $(\`echo goodBye\`),
        \\"handle:non-alpha\\": $(\`echo handled\`)
    },
    prod: {},
    shared: {}
})
"
`;

exports[`generates ts 1`] = `
"import { jsrx, $, shell } from \\"jsrx\\"

jsrx({
    dev: {
        sayHello: $(\`echo hello\`),
        sayGoodBye: $(\`echo goodBye\`),
        \\"handle:non-alpha\\": $(\`echo handled\`)
    },
    prod: {},
    shared: {}
})
"
`;
